white overflow (right pageside) fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,7 @@ input, select, textarea {
 		background: #ffffff;
 		height: 100%;
 		min-width: 320px;
+		overflow-x: hidden;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
